# ShellMentor

./: .gitignore  README.md  __init__.py  challenge.py  data_manager.py  github_sync.py  learning.py  main.py  playground.py  progress.py  pyproject.toml  requirements.txt  sandbox.py  shellmentor.sh  summary.txt  test_core.py  ui.py  ui_activities.py  ui_core.py  ui_screens.py  utils.py  what_has_been_done.txt  what_to_do.txt
data/: achievements.json  challenges.json  lessons.json  missions.json
themes/: themes.yaml
workspace/: constraints.sdc  employees.csv  liberty.lib  netlist.v  placement.rpt  power.rpt  routing.rpt  sales.csv  timing.rpt
