[project]
name = "shellmentor"
version = "4.1.0"
description = "Professional Linux Command-Line Learning Platform"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kunal Saraswat"}]
readme = "README.md"
dependencies = [
    "textual>=0.30.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "platformdirs>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
